--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 :root {
   --branding-color: #d3e5f3;
+  --color: #0477fa;
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
 }
@@ -12,6 +13,7 @@ h1 {
   font-size: 96px;
   font-family: var(--heading-font-family);
   font-weight: bold;
+  line-height: 1.5;
 }
 p {
   margin: 50px auto 50px;
@@ -19,10 +21,52 @@ p {
   font-weight: normal;
   font-size: 24px;
 }
+h2 {
+  font-size: 64px;
+  margin: 10px auto;
+}
+#name {
+  margin: 250px auto 30px;
+}
 .container {
-  margin: 250px auto;
+}
+.row {
+  margin: 100px auto 100px;
 }
 #button__resume,
 #button__contact {
   margin: 0 20px;
+}
+.btn-branding-outline {
+  color: var(--color);
+  border: 1px solid var(--color);
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+  transition: all 200ms ease-in-out;
+}
+.btn-branding-outline:hover {
+  background-color: var(--color);
+  color: white;
+}
+.columns-title {
+  padding: 0px 60px;
+}
+.navbar-text {
+  display: block;
+  text-align: center;
+}
+@media (max-width: 960px) {
+  h1 {
+    font-size: 60px;
+  }
+  h2 {
+    font-size: 44px;
+  }
+
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
 }
